Alterações no Label (Muda de posição junto com o input:focus)

--- a/login.html
+++ b/login.html
@@ -11,7 +11,7 @@
 <body> 
     <section class="container">
         <div class="img-container">
-            <img src="img/checklist.png" alt="Checklist">
+            <img src="img/tasks-img.svg" alt="Checklist">
         </div>
 
         <div class="login-container">
@@ -25,12 +25,14 @@
 
             <div class="input-container">
                 <div class="input-text">
-                    <input id="email" type="email" placeholder="E-mail Institucional" required autofocus>
-                    <label for="email"><i class="far fa-envelope"></i></label>
+                    <input id="email" type="email" placeholder="" required autofocus>
+                    <label for="email" class="label-text">E-mail Institucional</label>
+                    <label for="" class="label-icon"><i class="far fa-envelope"></i></label>
                 </div>
                 <div class="input-text">
-                    <input id="senha" type="password" placeholder="Senha" required>
-                    <label for="senha"><i class="fas fa-lock"></i></label>
+                    <input id="senha" type="password" placeholder="" required>
+                    <label for="senha" class="label-text">Senha</label>
+                    <label for="" class="label-icon"><i class="fas fa-lock"></i></label>
                 </div>
                 <input type="submit" name="btn-entrar" value="ENTRAR">
             </div>
