--- a/dashboard.html
+++ b/dashboard.html
@@ -20,13 +20,14 @@
             </div>
 
             <div class="search-bar">
-                <span class="material-icons-sharp">search</span>
                 <input type="search" placeholder="Search">
+                <span class="material-icons-sharp">search</span>
             </div>
 
             <div class="profile-area">
                 <div class="notification-btn">
                     <button><span class="material-icons-sharp">notifications</span></button>
+                    <!--COLOCAR JAVASCRIPT // INTERAÇÃO COM O BOTÃO DE NOTIFICAÇÕES-->
                 </div>
 
                 <div class="profile">
@@ -35,12 +36,13 @@
                     </div>
                     <h5>Usuário</h5>
                     <span class="material-icons-sharp">expand_more</span>
+                    <!--COLOCAR JAVASCRIPT // INTERAÇÃO COM O BOTÃO DE DROPDOWN-->
                 </div>
             </div>
         </div>
     </nav>
     
-    <!--ASIDE BAR-->
+    <!--MENU-->
     <aside>
         <div class="sidebar">
             <a href="#">
@@ -65,7 +67,7 @@
 
             <a href="#">
                 <span class="material-icons-sharp">cast_for_education</span>
-                <h3>Sistemas Externos</h3>
+                <h3>Externos</h3>
             </a>
     
             <a href="#">
