--- a/dashboard.html
+++ b/dashboard.html
@@ -251,6 +251,7 @@
                 </div>
             </div>
 
+            <!-- TABELA DE ATIVIDADES -->
             <div class="task-table-container">
                 <h1>Atividades</h1>
                 <table>
@@ -267,7 +268,7 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="exam">
+                            <td>
                                 <h5>Exame dos Módulos 8-10</h5>
                             </td>
                             <td>
@@ -352,10 +353,61 @@
         <section id="right">
             <div class="calendar">
                 <h3>Janeiro 2022</h3>
+                <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FSao_Paulo&src=Z2VvdmFuaS5zaWx2YUBlc3R1ZGFudGUuaWZiLmVkdS5icg&src=Y19jbGFzc3Jvb20yNjFhM2E0OUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23039BE5&color=%230047a8" " width="290" height="220" frameborder="1" scrolling="no"></iframe>
             </div>
 
             <div class="aulas">
                 <h3>Aulas síncronas</h3>
+                <h5>Segunda, 20 de Dezembro</h5>
+
+                <div class="day-option">
+                    <button id="dia">Hoje</button>
+                    <span class="material-icons-sharp">expand_more</span>
+                </div>
+
+                <div class="day-class">
+                    <h6 id="class-start">14:00</h6>
+                    <div class="class-option">
+                        <h5>Redes de computadores</h5>
+                        <div class="class-information">
+                            <span class="material-icons-sharp">watch_later</span>
+                            <h6>4 horas</h6>
+                        </div>
+                        <div class="class-information">
+                            <span class="material-icons-sharp">person</span>
+                            <h6>Diógenes</h6>
+                        </div>
+                    </div>
+                    <h6 id="class-end">18:00</h6>
+
+                    <div class="class-active">
+                        <h5>Redes de computadores</h5>
+                        <div class="class-active-icons">
+                            <div>
+                                <div class="class-active-information">
+                                    <span class="material-icons-sharp">person</span>
+                                    <h6>Diógenes</h6>
+                                </div>
+                                <div class="class-active-information">
+                                    <span class="material-icons-sharp">watch_later</span>
+                                    <h6>14:00 - 18:00</h6>
+                                </div>
+                            </div>
+
+                            <div>
+                                <div class="class-active-information">
+                                    <span class="material-icons-sharp">calendar_today</span>
+                                    <h6>Seg, Dezembro 20</h6>
+                                </div>
+                                <div class="class-active-information">
+                                    <span class="material-icons-sharp">exit_to_app</span>
+                                    <h6>Google Meet</h6>
+                                </div>
+                            </div>
+                        </div>
+                        <a href="https://meet.google.com/?authuser=0">Entrar na aula</a>
+                    </div>  
+                </div>
             </div>
         </section>
     </main>
