JavaScript da Dashboard e página dos cursos

--- a/dashboard.html
+++ b/dashboard.html
@@ -55,7 +55,7 @@
                     <span class="material-icons-sharp">calendar_month</span>
                     <h3>Calendário</h3>
                 </a>
-                <a href="#">
+                <a href="cursos.html">
                     <span class="material-icons-sharp">book</span>
                     <h3>Cursos</h3>
                 </a>
@@ -68,7 +68,7 @@
                     <h3>Externos</h3>
                 </a>
         
-                <a href="#">
+                <a href="login.html">
                     <span class="material-icons-sharp">logout</span>
                     <h3>Sair</h3>
                 </a>
@@ -358,7 +358,7 @@
 
             <div class="aulas">
                 <h3>Aulas síncronas</h3>
-                <h5>Segunda, 20 de Dezembro</h5>
+                <h5>Segunda, 24 de Janeiro</h5>
 
                 <div class="day-option">
                     <button id="dia">Hoje</button>
@@ -397,7 +397,7 @@
                             <div>
                                 <div class="class-active-information">
                                     <span class="material-icons-sharp">calendar_today</span>
-                                    <h6>Seg, Dezembro 20</h6>
+                                    <h6>Seg, Janeiro 24</h6>
                                 </div>
                                 <div class="class-active-information">
                                     <span class="material-icons-sharp">exit_to_app</span>
@@ -405,11 +405,12 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="https://meet.google.com/?authuser=0">Entrar na aula</a>
+                        <a href="http://meet.google.com/yno-qynd-uee" target="_blank">Entrar na aula</a>
                     </div>  
                 </div>
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
