--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                     <label for="senha" class="label-text">Senha</label>
                     <label for="" class="label-icon"><i class="fas fa-lock"></i></label>
                 </div>
-                <input type="submit" name="btn-entrar" value="ENTRAR">
+                <a href="dashboard.html"><input type="submit" name="btn-entrar" value="ENTRAR"></a>
             </div>
         </div>
     </section>
