--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apoio Acadêmico</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/styles/style.css">
     <script src="https://kit.fontawesome.com/749211d7c1.js" crossorigin="anonymous"></script>
 </head>
 <body> 
@@ -25,7 +25,7 @@
 
             <div class="input-container">
                 <div class="input-text">
-                    <input id="email" type="email" placeholder="" required autofocus>
+                    <input id="email" type="email" required autofocus>
                     <label for="email" class="label-text">E-mail Institucional</label>
                     <label for="" class="label-icon"><i class="far fa-envelope"></i></label>
                 </div>
@@ -34,10 +34,10 @@
                     <label for="senha" class="label-text">Senha</label>
                     <label for="" class="label-icon"><i class="fas fa-lock"></i></label>
                 </div>
-                <a href="dashboard.html"><input type="submit" name="btn-entrar" value="ENTRAR"></a>
+                <a href="#"><input type="submit" name="btn-entrar" value="ENTRAR"></a>
             </div>
         </div>
     </section>
-
+    <script src="./scripts/index.js"></script>
 </body>
 </html>
