[fix]: login page and scripts fixed

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                 <div class="input-text">
                     <input id="senha" type="password" placeholder="" required>
                     <label for="senha" class="label-text">Senha</label>
-                    <label for="" class="label-icon"><i class="fas fa-lock"></i></label>
+                    <label for="senha" class="label-icon"><i class="fas fa-lock"></i></label>
+                    <i class="fas fa-eye lock"></i>
+                    <span>Esqueceu a senha?</span>
                 </div>
                 <a href="#"><input type="submit" name="btn-entrar" value="ENTRAR"></a>
             </div>
